# cantus

./: .env  .env.sample  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  VERSION  Vagrantfile  check_for_duplicates.py  compose-dev.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt  solr_tomcat_mvn_setup.txt
.github/: dependabot.yml
.github/workflows/: cd_stage.yml  lint_and_test.yml  unittests.yml
GXML2MEI/: diva.html  gameraXML2MEI.py  imageOverlayScript.py  mei2DivaHighlight.js  meiEditor.js  page_glyphs.xml  proof.html  stgall-pagebased.rng  testdoc.mei  xmlDict.py
GXML2MEI/mei/: 015.mei  017.mei  018.mei  020.mei  0835_corr.mei
GXML2MEI/test_gamera_xml2mei/: __init__.py  test_cluster_detection.py  test_zone_clustering.py  test_zone_overlap.py
app/: Dockerfile  django-config.sh  install-packages.sh  key.sh  runtests.py
app/cantus-staticpages/: README.md
app/cantusdata/: wsgi.py
app/public/: manage.py  requirements.txt  runtests.py
cantaloupe/: Dockerfile  cantaloupe.properties
cantusproject/: manage.py  requirements.txt
cantusproject/cantusproject/: settings.py  urls.py  wsgi.py
editor/: csg0390demo.json  diva.html  divaEditor.css  divaManager.css  imagesOutOld.json  index.html  mei2DivaHighlight.js  meiEditor.css  meiEditor.js  meiEditorDivaManager.js  meiEditorFileUpload.js  meiEditorXMLValidator.js  xmllintHeader.js
editor/mei/: 016.mei  019.mei
etc/ci/: before-test.sh  install.sh  post-combined-coverage.sh  post-coverage.sh  prepare-server.sh  print-server-coverage.sh  run-tests.sh  test-frontend.sh  test-server.sh
etc/client-coveralls-coverage/: index.js  package.json
etc/provision/: oldsetup-pymei.sh  pymei-setup-fix.patch  setup-django.sh  setup-privileged.sh  setup-pymei.sh  setup-solr.sh  setup-systemd.sh  setup-unprivileged.sh  setup-variables.sh  setup.sh
etc/snippets/: diffing.py  genreparser.py  htmlparser.py  sync.sh
nginx/: Dockerfile  nginx.conf
nginx/app/: gulpfile.mjs  webpack.config.js
nginx/deprecated/: utils.js
postgres/: Dockerfile
public/: .coveragerc  gunicorn_start-example.sh  import_all_data.sh  manage.py  requirements-dev.txt  requirements.txt  runtests.py  urls.py  wsgi.py
public/admin/: __init__.py  admin.py
public/cantusdata/: __init__.py  asgi.py  settings-example.py  settings.py  urls.py  wsgi.py
public/cantusdata_front_end/: .gitignore  .jshintrc  bundle-templates.js  compile.bash  gulpfile.js  package.json  webpack.config.js
public/data_dumps/: 123606_CH-E611.csv  123628_St-Maur-F.csv  123631_F-Pn-15181.csv  123717_Ch-390.csv  123718_Ch-391.csv  123723.csv  123723_Salzinnes.csv  concordances  diffing.py  paris-12044.csv  paris-15181.csv  position_names.csv  public-manuscripts.csv  salzinnes-chants.csv  st-gallen-390-chants.csv  st-gallen-391-chants.csv  (+1 more)
rabbitmq/: Dockerfile
solr/: Dockerfile  pom.xml  solr-config.sh
(+2374 files in other folders)
