[tool.poetry]
package-mode = false
name = "cantus-ultimus"

[tool.poetry.dependencies]
python = "^3.12"
celery = "5.4.0"
django = "5.0.6"
django-celery-results = "2.5.1"
djangorestframework = "3.15.2"
gunicorn = "22.0.0"
lxml = "5.2.2"
markdown = "3.6"
psycopg = {extras = ["binary"], version = "^3.1.18"}
requests = "2.32.3"
solrpy = { git = "https://github.com/search5/solrpy", tag = "rel-1-0-0"}

[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
django-extensions = "3.2.3"
Werkzeug = "3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pylint = "^3.1.0"
lxml-stubs = "^0.5.1"
django-stubs = "^5.0.2"
pylint-django = "^2.5.5"
djangorestframework-stubs = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
